<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_vertical_size"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_text"
            android:textColor = "@color/colorTopFont"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="start"
            android:text= "@string/score_text"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:id="@+id/score"
            android:textColor = "@color/colorTopFont"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="start"
            android:text= "@string/score"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/timer_text"
            android:textColor = "@color/colorTopFont"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="end"
            android:text= "@string/timer_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginStart="@dimen/left_margin"
            android:id="@+id/timer"
            android:textColor = "@color/colorTopFont"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="end"
            android:text= "@string/timer"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/questionbar_vertical_size"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/question"
        android:textColor = "@color/colorQuestionFont"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="start"
        android:text= "@string/question"
        android:maxLines="4"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/radiogroup_top_margin"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ans1"
            android:paddingBottom="@dimen/radiobutton_bottom_margin"
            android:paddingTop="@dimen/radiobutton_top_margin"
            android:textColor="@color/colorRadioFont"
            android:buttonTint="@color/colorRadioButton"
            android:checked="false"
            android:text= "@string/ans1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ans2"
            android:paddingBottom="@dimen/radiobutton_bottom_margin"
            android:paddingTop="@dimen/radiobutton_top_margin"
            android:textColor="@color/colorRadioFont"
            android:buttonTint="@color/colorRadioButton"
            android:checked="false"
            android:text= "@string/ans2"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ans3"
            android:paddingBottom="@dimen/radiobutton_bottom_margin"
            android:paddingTop="@dimen/radiobutton_top_margin"
            android:textColor="@color/colorRadioFont"
            android:buttonTint="@color/colorRadioButton"
            android:checked="false"
            android:text= "@string/ans3"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ans4"
            android:paddingBottom="@dimen/radiobutton_bottom_margin"
            android:paddingTop="@dimen/radiobutton_top_margin"
            android:textColor="@color/colorRadioFont"
            android:buttonTint="@color/colorRadioButton"
            android:checked="false"
            android:text= "@string/ans4"/>

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Check"
            android:id="@+id/Check"
            android:onClick="checkQuiz"
            android:layout_centerInParent ="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/btnNext"
            android:onClick="clickNext"
            android:layout_centerInParent ="true"
            android:visibility="invisible"
            />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"/>
    </RelativeLayout>

</LinearLayout>
