<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount = "4"
        android:columnCount="3"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/movie_name_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/primary_text"
            android:layout_columnSpan="3"
            android:layout_gravity="center"
            android:text="@string/movie_name"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            />
        <ImageView
            android:id="@+id/movie_poster"
            android:layout_columnSpan="2"
            android:layout_columnWeight="3"
            android:layout_rowSpan="3"
            android:layout_height="250dp"
            android:layout_width="200dp"
            android:layout_gravity="left"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/the_life_of_pets"
            />
        <LinearLayout android:orientation="vertical"
            android:layout_columnSpan="1"
            android:layout_rowSpan="3"
            android:layout_height="250dp"
            android:layout_columnWeight="1">
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
        <ImageView
            android:id="@+id/rating_icon"
            android:layout_height="@dimen/rating_icon"
            android:layout_width="@dimen/rating_icon"
            android:src="@drawable/ic_star_grey600_24dp"
            android:cropToPadding="false"
            android:layout_gravity="center_vertical|end"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
        <TextView
            android:id="@+id/movie_rating"
            android:layout_height="@dimen/rating_icon"
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            android:text="@string/movie_rating"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_gravity="center_vertical|start"
            />
                </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/movie_language"
                    android:layout_height="@dimen/rating_icon"
                    android:layout_width="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primary_text"
                    android:text="@string/movie_language"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_gravity="center_vertical|start"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/share_button"
                    android:maxHeight="@dimen/rating_icon"
                    android:maxWidth="@dimen/rating_icon"
                    android:layout_gravity="center_vertical"
                    android:cropToPadding="false"
                    android:src="@drawable/ic_share_variant_grey600_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rating_icon"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/movie_overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_text"
            android:layout_columnSpan="3"
            android:layout_gravity="start"
            android:text="@string/movie_overview"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:maxLines="5"
            />
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottombar_vertical_size">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/next"
            android:onClick="clickNext"
            android:layout_centerInParent ="true"
            />
    </RelativeLayout>

</LinearLayout>
